<resources>
    <string name="app_name">프로젝트1</string>
    <string name="btn_login">로그인</string>
    <string name="btn_join">회원 가입</string>
    <string name="tv_id">ID : </string>
    <string name="tv_pw">Pw : </string>
    <string name="tv_user">사용자 %s 님 환영합니다.</string>
    <string name="jointv1">회원가입</string>
    <string name="idEdt">아이디</string>
    <string name="nameEdt">이름</string>
    <string name="passEdt">비밀번호</string>
    <string name="passChkEdt">비밀번호 확인</string>
    <string name="okBtn">확인</string>
    <string name="cancelBtn">취소</string>
</resources>