<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinActivity">

    <LinearLayout
        android:id="@+id/joinli1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/holo_orange_light"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@id/viw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/jointv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/jointv1"
            android:textSize="40dp" />

    </LinearLayout>

    <View
        android:id="@+id/viw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/joinli1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/joingli"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/joingli"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <EditText
        android:id="@+id/idEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idEdt"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/joingli"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameEdt"/>

    <EditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameEdt"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/idEdt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passEdt" />

    <EditText
        android:id="@+id/passEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passEdt"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        app:layout_constraintTop_toBottomOf="@id/nameEdt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passChkEdt"/>

    <EditText
        android:id="@+id/passChkEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passChkEdt"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/passEdt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:id="@+id/joinli2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/okBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/okBtn"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/cancelBtn"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>